Feature/99183 internal case status (#1201)
* added internal case status management endpoints and entity
* internal case status resource autoconfig
* added auto deployment of internal case statuses
* added importing
* added exporting

---------

Co-authored-by: Maxim Buur <maxim.buur@ritense.com>